fixed favicon linking

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/style.css">
         <link id="theme-style" rel="stylesheet" type="text/css" href="">
-        <link rel="icon" href="/img/kt-logo.png" id="icon">
+        <link rel="icon" href="/img/logo.png" id="icon">
         <title>{{ title }}</title>
         <style>
             .disable-scroll {
