--- a/src/_includes/contact.njk
+++ b/src/_includes/contact.njk
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/style.css">
         <link id="theme-style" rel="stylesheet" type="text/css" href="">
         <link rel="stylesheet" href="/css/contact.css">
-        <link rel="icon" href="/img/kt-logo.png" id="icon">
+        <link rel="icon" href="/img/logo.png" id="icon">
         <title>Tulsi's Blog | {{ title }}</title>
     </head>
     <body>
