--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -3,7 +3,10 @@
 /* contact */
 
 .contact-section {
-  min-height: 84vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .contact-form {
@@ -12,10 +15,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 50%;
+  max-width: 750px;
 }
 .contact-title {
   text-align: center;
-  font-size: 2rem;
+  font-size: 200%;
   padding: 0.5rem;
   color: var(--orange-text);
 }
@@ -32,10 +37,10 @@ textarea {
 
 input {
   background-color: #fff4e9;
-  font-size: 1rem;
+  font-size: 150%;
   color: #000;
   font-family: sans-serif;
-  width: 300px;
+  width: 100%;
   margin: 1rem auto;
   padding: 1rem;
   border-radius: 10px;
@@ -44,11 +49,11 @@ input {
 }
 textarea {
   background-color: #fff4e9;
-  font-size: 1rem;
+  font-size: 150%;
   color: #000;
   font-family: sans-serif;
   resize: none;
-  width: 300px;
+  width: 100%;
   margin: 1rem auto;
   padding: 1rem;
   border-radius: 10px;
@@ -56,10 +61,10 @@ textarea {
   box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.5);
 }
 .submit {
-  width: 150px;
+  width: 10rem;
   text-align: center;
   padding: 0.5rem 1.5rem;
-  font-size: 1.5rem;
+  font-size: 150%;
   cursor: pointer;
   background-color: #ff6700;
   color: #fff;
@@ -87,7 +92,7 @@ textarea {
   left: 0;
   right: 0;
   top: 5rem;
-  font-size: 17px;
+  font-size: 100%;
   border-radius: 5px;
 }
 
@@ -121,7 +126,7 @@ textarea {
   left: 0;
   right: 0;
   top: 5rem;
-  font-size: 17px;
+  font-size: 100%;
   border-radius: 5px;
 }
 
@@ -189,5 +194,14 @@ textarea {
 @media (max-width: 750px) {
   .contact-title {
     margin-top: 4rem;
+  }
+}
+@media (max-width: 800px) {
+  .contact-form {
+    width: 90%;
+  }
+  input,
+  textarea {
+    font-size: 100%;
   }
 }
