different shades of orange-text for both themes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,7 @@
   --header-bg-color: #f8f8f8;
   --footer-bg-color: #f8f8f8;
   --navigation-bg: #f8f8f8;
-  --orange-text: #ff6700;
+  --orange-text: #e25a00;
 }
 
 /* Global Styles */
