--- a/src/_includes/contact.njk
+++ b/src/_includes/contact.njk
@@ -7,6 +7,12 @@
         <link rel="stylesheet" href="/css/style.css">
         <link id="theme-style" rel="stylesheet" type="text/css" href="">
         <link rel="stylesheet" href="/css/contact.css">
+        <link rel="manifest" href="/manifest.json"> 
+        <!-- ios support -->
+        <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
+        <meta name="apple-mobile-web-app-status-bar" content="#ffc966">
+        <meta name="theme-color" content="#ffc966">
+        
         <link rel="icon" href="/img/logo.png" id="icon">
         <title>Tulsi's Blog | {{ title }}</title>
     </head>
