changed status bar color for mobile

--- a/src/_includes/contact.njk
+++ b/src/_includes/contact.njk
@@ -10,8 +10,8 @@
         <link rel="manifest" href="/manifest.json"> 
         <!-- ios support -->
         <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
-        <meta name="apple-mobile-web-app-status-bar" content="#ffc966">
-        <meta name="theme-color" content="#ffc966">
+        <meta name="apple-mobile-web-app-status-bar" content="#cc7000">
+        <meta name="theme-color" content="#cc7000">
         
         <link rel="icon" href="/img/logo.png" id="icon">
         <title>Tulsi's Blog | {{ title }}</title>
