--- a/src/offline.njk
+++ b/src/offline.njk
@@ -13,8 +13,8 @@ permalink: /offline.html
         <link
         rel="manifest" href="/manifest.json"> <!-- ios support -->
         <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
-        <meta name="apple-mobile-web-app-status-bar" content="#ffc966">
-        <meta name="theme-color" content="#ffc966">
+        <meta name="apple-mobile-web-app-status-bar" content="#cc7000">
+        <meta name="theme-color" content="#cc7000">
         <style>
             /* Global Styles */
             *,
